--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:theme="@android:style/Theme.NoDisplay" />
 
         <activity
-            android:name=".WebViewActivity"
+            android:name=".ui.base.webview.WebViewActivity"
             android:label=""
             android:theme="@style/Theme.AppCompat.WebView" />
 
