--- a/example/build.gradle
+++ b/example/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "io.primer:3ds-android:1.1.0"
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
