--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,6 @@ POM_DEVELOPER_NAME=Primer Developers
 POM_DEVELOPER_URL=https://github.com/primer-io
 
 ARTIFACTORY_3DS_URL=https://primer.jfrog.io/artifactory/primer-android/
+
+PRIMER_ANDROID_ARTIFACTORY_3DS_USERNAME=primer-android-3ds
+PRIMER_ANDROID_ARTIFACTORY_3DS_PASSWORD=BGGsX9TuQjjpvkn@ktRkEZRC
