--- a/example/build.gradle
+++ b/example/build.gradle
@@ -71,8 +71,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    implementation("com.squareup.okhttp3:okhttp:3.14.9")
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation("com.squareup.okhttp3:okhttp:4.9.2")
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
@@ -81,6 +82,7 @@ dependencies {
     implementation "io.primer:3ds-android:1.1.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'io.github.pilgr:paperdb:2.7.2'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
