--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.enableR8.fullMode=true
 # Publishing values (see publish.gradle)
 GROUP=io.primer
 POM_ARTIFACT_ID=android
