--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -27,11 +27,14 @@ android {
         debug {
             minifyEnabled false
             debuggable true
-            consumerProguardFiles 'proguard-rules.pro'
         }
         release {
-            minifyEnabled false
-            consumerProguardFiles 'proguard-rules.pro'
+            minifyEnabled true
+
+            consumerProguardFiles 'consumer-rules.pro'
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
         }
     }
 
