--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,15 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.16.0"
+    id "org.sonarqube" version "3.4.0.2513"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "primer-sdk-android"
+    property "sonar.organization", "tino-primer"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 task clean(type: Delete) {
