--- a/build.gradle
+++ b/build.gradle
@@ -34,13 +34,13 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.16.0"
-    id "org.sonarqube" version "3.4.0.2513"
+    id "org.sonarqube" version "3.5.0.2730"
 }
 
 sonarqube {
     properties {
         property "sonar.projectKey", "primer-sdk-android"
-        property "sonar.organization", "tino-primer"
+        property "sonar.organization", "primerio"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.coverage.jacoco.xmlReportPaths", "/home/runner/work/primer-sdk-android/primer-sdk-android/primer-sdk-android/build/jacoco/jacoco.xml"
