--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -17,7 +17,7 @@ ext {
                     primerKlarna: "io.primer:klarna-android:${Versions.primerKlarna}"
             ],
             iPay88    : [
-                    primeriPay88: "io.primer:ipay88-android:${Versions.primeriPay88}"
+                    primeriPay88: "io.primer:ipay88-my-android:${Versions.primeriPay88}"
             ]
     ]
 }
