--- a/example/build.gradle
+++ b/example/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.2.0"
 
     implementation 'io.primer:klarna-android:1.0.1'
-    implementation 'io.primer:ipay88-android:1.0.0'
+    implementation 'io.primer:ipay88-my-android:1.0.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
