--- a/config/analysis.gradle
+++ b/config/analysis.gradle
@@ -29,6 +29,7 @@ tasks.detekt.jvmTarget = projectJvmTarget
 
 // ktlint setup - https://github.com/JLLeitschuh/ktlint-gradle
 ktlint {
+    version = "0.43.2"
     debug = false
     verbose = false
     android = true
